sites/all/themes/mosaic/sass/global/_global.scss
// Contains only globally needed scss declarations
//  If it is not visible on EVERY page do not
//  add it here!

// external imports
@import 'compass/css3/opacity';
@import "compass/css3/border-radius";
@import "compass/css3/box-shadow";

@import 'global/arrows';
@import 'global/buttons';
@import 'global/colors';
@import 'global/comments';
@import 'global/fonts';
@import 'global/gradients';
@import 'global/grid_mix';
@import 'global/icons';
@import 'global/site_vars';


// -- Global container widths
.pane-header,
.pane-footer,
.pane-page-tabs,
.pane-page-messages,
.pane-top-menus #mini-panel-top_menus,
.mosaic-cont > .container {
  @include site_width;
}

// site margin top and bottom
.pane-header { margin: 0 auto; padding-top: .5em; }
.pane-footer { margin: 0 auto $default_vert_unit; }

// Unset margin in the header
#mini-panel-header { 
  .inside, .panel-separator { margin: 0; }
}

// -- Coloration globals
// Site body
body.html {
  background: $dkgray; 
}
// See _menus.scss for primary (main) menu 
//  coloration settings.
header,
.mosaic-cont {
  background: $white;
}
.mosaic-cont {
  padding: 1em 0 0;
}

// -- Search form -- added here bc it is on every page
header .pane-search-form {
  background: url(../assets/images/search-bg.png) left top no-repeat;
  height: 50px;
  margin: 10px 0 0 10px;
  padding: 10px 0 0 18px;
  position: relative;
  width: 275px;
  
  .form-text {
    background: none;
    border: none;
    font-size: 100%;
    font-weight: bold;
    margin: 0;
    padding: 5px 8px;
    width: 185px;
  }
  .form-wrapper {
    border: 1px solid $dkblue;
    height: 27px;
    position: absolute;
    right: 4px;
    top: 11px;
    width: 65px;
    
    .form-submit {
      color: $white;
      height: 27px;
      width: 65px;
      
      @include font(80%);
      @include btn-matte-inset;
      @include btn-structure;
    }
  }
}


// This is not used atm
header .coral-cloud {
  display: block;
  width: 85px;
  margin: 0 0 0 54.5%;
  
  .icon {
    position: absolute;
    display: block;
    top: 68px;
    z-index: 0;
    @include icons-sprite('cloud-case');
  }
}
// end not used comp


// -- Gigya
.pane-gigya-gigya-login {
  float: right;
  position: relative;
  
  .pane-title {
    text-align: center;
    color: $mdgray;
    
    @include font(70%, bold);
  }
  #divGigyaLogin_bottomLink,
  #divGigyaLogin-1_bottomLink,
  #divGigyaLogin-2_bottomLink {
    margin-top: -21px;
    
    table td { text-align: center; }
    
    @include opacity(.85);
  }
}
// Gigya or coral_user take the 
//  same spot in the header:

// User welcome in the header
.pane-coral-user {
  float: right;
  margin-top: $default_vert_unit;
  
  .welcome {
    float: left;
    color: $ltgray;
    font-weight: bold;
    margin: ($default_vert_unit / 4) .75em 0 0;
  }
  .user-picture {
    float: left;
  }
  .username {
    float: right;
    margin: ($default_vert_unit / 4) .5em 0 .5em;
  }
}


// Table of contents as it appears in content
.toc-wrapper {
  border: 1px solid darken($ltblue, 5%);
  clear: left;
  width: 12em;
  float: left;
  
  margin: (-1 * $default_vert_unit) 1em ($default_vert_unit / 2) 0;
    
  @include linear-v-gradient(lighten($ltblue, 10%), lighten($ltblue, 5%));
  
  .toc-title {
    text-align: left;
    font-size: 90%;
    color: $mdgray;
    font-weight: bold;
    padding: ($default_vert_unit / 8) ($default_vert_unit / 4);
  }
  .toc-tog-state { margin-left: .5em; }
  .toc-tog-state span {
    font-size: 95%;
    font-family: $mono-fonts;
    font-weight: bold;
    margin: 0 .25em;
    color: $mdblue;
    cursor: pointer;
  }
  .toc-screen {
    padding: 0 ($default_vert_unit / 4) ($default_vert_unit / 4) ($default_vert_unit / 2);
    
    .toc {
      font-size: 95%;
    }
  }  
}
// Back to top links
.toc-top {
  border: 1px solid $mdgray;
  float: right;
  padding: 0;
  display: block;
  text-indent: 100%;
  white-space: nowrap;
  overflow: hidden;
  height: 15px;
  width: 15px;
  line-height: 30px;
  margin-right: -1.25em;
  font-size: 1em;
  
  @include border-radius(8px);
  @include linear-v-gradient($ltgray, lighten($ltgray, 7%));
  
  .arrow {
    display: block;
    position: relative;
    top: -1px;
    left: 2px;
    
    @include arrow-up(5px, $mdblue);
  }
}
h2 .toc-top {
  margin-top: ($default_vert_unit / 2);
  margin-right: -1.15em;
}
h3 .toc-top {
  margin-top: ($default_vert_unit / 8);
}


// Flag message defaults
.flag-message {
  background: $ltyellow;
  border: 1px solid $ltblue;
  color: $mdgray;
  display: inline;
  left: -37px;
  position: absolute;
  padding: 5px;
  text-align: center;
  text-shadow: none;
  top: 1.85em;
  width: 140px;
  z-index: 3;
      
  @include border-radius(8px);
  @include box-shadow(rgba(0,0,0,.35) 3px 3px 6px);
}

// Flag follow
.html ul.links li.flag-follow {
  // reset the blue defaults
  @include btn-matte-inset(0px, 16px, darken($mdgray, 10%), $dkgray);
  @include btn-structure;
}

// Flag abuse
.pane-coral-flag-abuse-node {
  float: left;
  margin: 4px 0 0 0;
  padding: 2px 5px 1px;
  
  .flag-abuse-node {
    position: relative;
    
    a.flag-action,
    a.unflag-action {
      display: block;
      height: 16px;
      margin: 0;
      padding: 0;
      text-indent: -9999em;
      width: 15px;
      
      @include icons-sprite('coral-flag-red');
    }
    a.unflag-action {
      @include icons-sprite('coral-flag-green');
    }
    .flag-throbber {
      position: absolute;
      right: -2.5em;
      display: block;
      height: 20px;
      width: 20px;
      top: -1.15em;
    }
  }
  .flag-message {
    top: .5em;
    left: -65px;
  }
}


// -- Footer
.pane-coral-footer {
  color: $white;
  font-size: 90%;
  text-align: right;
  margin: 0;
  
  .fde { // footer data element
    margin: 0 0 ($default_vert_unit / 2);
  }
}


// Primary and secondary tabs
.pane-page-tabs {
  padding: 0 0 $default_vert_unit;
  margin-top: -1.1em;
  
  .icoprim {
    display: block;
    float: right;
    margin: 5px -.75em 0 0;
    @include opacity(.5);
    @include icons-sprite('road-cone');  
  }
    
  ul { 
    float: right;
    margin: 0 0 1em; 
    li {
      //line-height: 1em;
      margin: 0 .5em 0 0;
      
      a {
        padding: 0 .5em;
        margin: 0;
      }
    }
  }
  ul.primary {
    border: none;
    line-height: .9 * $default_vert_unit;
    height: .9 * $default_vert_unit;
    
    li {
      margin: 0 0 0 .25em;
      a {
        font-size: 90%;
        border-style: none solid solid solid;
        border-width: 0px 1px 2px 1px;
        border-color: transparent darken($mdorange, 5%) darken($ltorange, 14%) $ltorange;
        background: $ltorange;
        color: $white;
        
        @include box-shadow(rgba(0, 0, 0, 0.35) 2px 0px 3px);
        @include linear-v-gradient(desaturate(darken($ltorange, 20%), 7%), saturate(darken($ltorange, 25%), 15%));
        @include opacity(.75);
        @include border-bottom-radius(5px);
        
        &:hover {
          border-color: transparent lighten($mdorange, 5%) lighten($ltorange, 5%) $ltorange;
          @include opacity(1);
        }
        
        &:active,
        &.active {
          @include linear-v-gradient(desaturate(darken($ltorange, 25%), 7%), saturate(darken($ltorange, 30%), 15%));
          @include box-shadow(rgba(0, 0, 0, 0.5) 2px 0px 2px);
          @include opacity(.85);
        }
        
      }
    }
  }
  ul.secondary {
    border-bottom: none;
    clear: both;
    float: none;
    padding: 0 0 ($default_vert_unit / 2) 0;

    li { 
      border-right: none;
      float: right; 
      margin-right: 0;
      padding: 0 0 0 5px;
      
      a {
        @include btn-matte-inset(3px, 12px, darken($silver, 5%), darken($silver, 15%), $white);
        @include btn-structure(2px 5px, 12px, 3px);
        @include box-shadow(rgba(0, 0, 0, 0.25) 2px 1px 3px);
        
        &:hover {}
        
        &:active,
        &.active {
          @include btn-matte-inset(3px, 12px, lighten($silver, 10%), darken($silver, 1%), $white);
          @include btn-structure(2px 5px, 12px, 3px);
          @include box-shadow(rgba(0, 0, 0, 0.25) 2px 1px 3px);
          text-shadow: none;
          color: $black;
        }
      }
    }
  }
}

